--- a/Backstage/src/app/layout/passport/passport.component.html
+++ b/Backstage/src/app/layout/passport/passport.component.html
@@ -3,16 +3,16 @@
   <div class="wrap">
     <div class="top">
       <div class="head">
-        <img class="logo" src="./assets/logo-color.svg">
-        <span class="title">ng-alain</span>
+        <img class="logo" src="./assets/login/logo.png">
+        <span class="title">金蝶</span>
       </div>
-      <div class="desc">武林中最有影响力的《葵花宝典》；欲练神功，挥刀自宫</div>
+      <div class="desc"></div>
     </div>
     <router-outlet></router-outlet>
     <global-footer [links]="links">
       Copyright
       <i class="anticon anticon-copyright"></i> 2017
-      <a href="//github.com/cipchk" target="_blank">卡色</a>出品
+      <a>xx</a>出品
     </global-footer>
   </div>
 </div>
