--- a/Backstage/src/app/routes/passport/login/login.component.html
+++ b/Backstage/src/app/routes/passport/login/login.component.html
@@ -5,20 +5,20 @@
       <nz-form-item>
         <nz-form-control>
           <nz-input-group nzSize="large" nzPrefixIcon="anticon anticon-user">
-            <input nz-input formControlName="userName" placeholder="username: admin or user">
+            <input nz-input formControlName="userName" placeholder="登录名">
           </nz-input-group>
           <nz-form-explain *ngIf="userName.dirty && userName.errors">
-            {{ 'Please enter mobile number!' | translate }}
+            {{ '请输入用户名!' | translate }}
           </nz-form-explain>
         </nz-form-control>
       </nz-form-item>
       <nz-form-item>
         <nz-form-control>
           <nz-input-group nzSize="large" nzPrefixIcon="anticon anticon-lock">
-            <input nz-input type="password" formControlName="password" placeholder="password: ng-alain.com">
+            <input nz-input type="password" formControlName="password" placeholder="密码">
           </nz-input-group>
           <nz-form-explain *ngIf="password.dirty && password.errors">
-            {{ 'Please enter password!' | translate }}
+            {{ '请输入登录密码!' | translate }}
           </nz-form-explain>
         </nz-form-control>
       </nz-form-item>
@@ -27,7 +27,7 @@
       <nz-form-item>
         <nz-form-control>
           <nz-input-group nzSize="large" nzPrefixIcon="anticon anticon-user">
-            <input nz-input formControlName="mobile" placeholder="mobile number">
+            <input nz-input formControlName="mobile" placeholder="手机号">
           </nz-input-group>
           <nz-form-explain *ngIf="mobile.dirty && mobile.errors">
             <ng-container *ngIf="mobile.errors.required">
@@ -44,7 +44,7 @@
           <nz-row [nzGutter]="8">
             <nz-col [nzSpan]="16">
               <nz-input-group nzSize="large" nzPrefixIcon="anticon anticon-mail">
-                <input nz-input formControlName="captcha" placeholder="captcha">
+                <input nz-input formControlName="captcha" placeholder="验证码">
               </nz-input-group>
               <nz-form-explain *ngIf="captcha.dirty && captcha.errors">
                 {{ 'validation.verification-code.required' | translate }}
@@ -65,7 +65,7 @@
       <label nz-checkbox formControlName="remember">{{ 'app.login.remember-me' | translate }}</label>
     </nz-col>
     <nz-col [nzSpan]="12" class="text-right">
-      <a class="forgot" (click)="msg.error('请找欧阳锋')">{{ 'app.login.forgot-password' | translate }}</a>
+      <a class="forgot" (click)="msg.error('请联系管理员')">{{ 'app.login.forgot-password' | translate }}</a>
     </nz-col>
   </nz-form-item>
   <nz-form-item>
