--- a/Backstage/src/app/routes/passport/register/register.component.html
+++ b/Backstage/src/app/routes/passport/register/register.component.html
@@ -4,7 +4,7 @@
   <nz-form-item>
     <nz-form-control>
       <nz-input-group nzSize="large" nzAddonBeforeIcon="anticon anticon-user">
-        <input nz-input formControlName="mail" placeholder="Email">
+        <input nz-input formControlName="mail" placeholder="邮箱">
       </nz-input-group>
       <ng-container *ngIf="mail.dirty && mail.errors">
         <nz-form-explain *ngIf="mail.errors?.required">{{ 'validation.email.required' | translate }}</nz-form-explain>
@@ -17,7 +17,7 @@
       <nz-popover [nzPlacement]="'right'" [nzTrigger]="'focus'" [(nzVisible)]="visible" nzOverlayClassName="register-password-cdk"
         [nzOverlayStyle]="{'width.px': 240}">
         <nz-input-group nzSize="large" nz-popover nzAddonBeforeIcon="anticon anticon-lock">
-          <input nz-input type="password" formControlName="password" placeholder="Password">
+          <input nz-input type="password" formControlName="password" placeholder="密码">
         </nz-input-group>
         <nz-form-explain *ngIf="password.dirty && password.errors">{{ 'validation.password.required' | translate }}</nz-form-explain>
         <ng-template #nzTemplate>
@@ -40,7 +40,7 @@
   <nz-form-item>
     <nz-form-control>
       <nz-input-group nzSize="large" nzAddonBeforeIcon="anticon anticon-lock">
-        <input nz-input type="password" formControlName="confirm" placeholder="Confirm Password">
+        <input nz-input type="password" formControlName="confirm" placeholder="确认密码">
       </nz-input-group>
       <nz-form-explain *ngIf="confirm.dirty && confirm.errors">
         <ng-container *ngIf="confirm.errors.required">
@@ -61,7 +61,7 @@
             <nz-option [nzLabel]="'+87'" [nzValue]="'+87'"></nz-option>
           </nz-select>
         </ng-template>
-        <input formControlName="mobile" nz-input placeholder="Phone number">
+        <input formControlName="mobile" nz-input placeholder="手机号">
       </nz-input-group>
       <nz-form-explain *ngIf="mobile.dirty && mobile.errors">
         <ng-container *ngIf="mobile.errors.required">
@@ -78,7 +78,7 @@
       <nz-row [nzGutter]="8">
         <nz-col [nzSpan]="16">
           <nz-input-group nzSize="large" nzAddonBeforeIcon="anticon anticon-mail">
-            <input nz-input formControlName="captcha" placeholder="Captcha">
+            <input nz-input formControlName="captcha" placeholder="验证码">
           </nz-input-group>
           <nz-form-explain *ngIf="captcha.dirty && captcha.errors">
             {{ 'validation.verification-code.required' | translate }}
