--- a/front/assets/css/social-recruitment.css
+++ b/front/assets/css/social-recruitment.css
@@ -64,3 +64,13 @@
     display: table-cell;
     vertical-align: middle;
 }
+
+@media screen and (max-width:996px) {
+    .marginCneter {
+        width: 90%;
+        margin-left: 5%;
+    }
+    .position-item {
+        width: 100%;
+    }
+}
